Mon Jun  6 02:10:32 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/TypeCode.cpp (equivalent):

	  Pass the unaliased TypeCode to the subclass equivalent_i()
	  template method instead of the potentially aliased one.  Fixes
	  equivalence failures between an aliased TypeCode and unaliased
	  TypeCode.  Thanks to Jiang Wei <jiangwei_1976 at yahoo dot com
	  dot cn> for reporting the problem and providing a simple test
	  case.  [Bug 2140]

Fri Jun  3 10:21:50 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Any/Recursive/client.cpp:

	  Fixed unused argument warnings in emulated exception builds.

	  Fixed syntax errors in minimum CORBA builds.

Fri Jun  3 09:17:13 2005  Chris Cleeland  <cleeland_c@ociweb.com>

        * tests/IOR_Endpoint_Hostnames/list_interfaces.cpp (main):

	  Since this code was copied from
	  TAO_IIOP_Acceptor::probe_interfaces(), update this code to look
	  like the code there.  This was also in response to seemingly
	  nonsense complaints on one platform in the line containing
	  ACE_static_cast(), so hopefully the change to static_cast<>
	  remedies that as well.

Fri Jun  3 14:49:14 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/Server_Request_Interceptor.cpp:

          This test was trying to use the old (and superior :-) ) form
          of the FT service context and was subsequently failing to
          extract the group version correctly. Fixed.

Thu Jun  2 14:04:23 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:

          Fix exception macros.

Thu Jun  2 11:06:05 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/examples/ImR/Advanced/TestServer.cpp:

          Add an explicit constructor to work around BCB6 compiler
          warnings about implicit char* to string conversion.

Thu Jun  2 09:10:38 2005  Chris Cleeland  <cleeland_c@ociweb.com>
